panko/tests/testsuite/snapshots/testsuite__scope-panko__tests__cases__execute__logical-ops__test_logical_or.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/logical-ops/test_logical_or.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/logical-ops/test_logical_or.c"
   (declaration printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (declaration f~1 `fn() -> int` ∅)
   (declaration g~2 `fn() -> int` ∅)
   (function-definition
      main~3 `fn(∅: int, argv: ptr<ptr<char>>) -> int`
      (params
         main.unnamed_parameter.0~5 `int`
         argv~6 `ptr<ptr<char>>`)
      (compound-statement
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~6 `ptr<ptr<char>>`) 1)
               (logical-or
                  0
                  0)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~6 `ptr<ptr<char>>`) 1)
               (logical-or
                  0
                  42)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~6 `ptr<ptr<char>>`) 1)
               (logical-or
                  27
                  0)))
         (expression
            (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
               (subscript (name argv~6 `ptr<ptr<char>>`) 1)
               (logical-or
                  42
                  27)))
         (expression
            (logical-or
               0
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (subscript (name argv~6 `ptr<ptr<char>>`) 1)
                  123)))
         (expression
            (logical-or
               123
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (subscript (name argv~6 `ptr<ptr<char>>`) 1)
                  456)))
         (expression
            (logical-or
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (subscript (name argv~6 `ptr<ptr<char>>`) 1)
                  5)
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (subscript (name argv~6 `ptr<ptr<char>>`) 1)
                  7)))
         (expression
            (logical-or
               (call (name f~1 `fn() -> int`))
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (subscript (name argv~6 `ptr<ptr<char>>`) 1)
                  1)))
         (expression
            (logical-or
               (call (name g~2 `fn() -> int`))
               (call (name printf~0 `fn(∅: ptr<char const>, ...) -> int`)
                  (subscript (name argv~6 `ptr<ptr<char>>`) 1)
                  2)))))
   (function-definition
      f~1 `fn() -> int`
      (compound-statement
         (return 0)))
   (function-definition
      g~2 `fn() -> int`
      (compound-statement
         (return 2))))

----- stderr -----
